# noir-r1cs

./: Cargo.toml  README.md  noir.json
noir-examples/basic/: Nargo.toml  Prover.toml  prove.sh
noir-examples/basic/src/: main.nr
noir-examples/zkchase/: Nargo.toml  Prover.toml  prove.sh
noir-examples/zkchase/src/: main.nr
src/: main.rs  types.rs  utils.rs
