[package]
name = "noir-r1cs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
acir = { git = "https://github.com/noir-lang/noir", tag = "v0.31.0", version = "0.47.0" }
acvm = { git = "https://github.com/noir-lang/noir", tag = "v0.31.0", version = "0.47.0" }
acir_field = { git = "https://github.com/noir-lang/noir", tag = "v0.31.0", version = "0.47.0" }
# acvm = "0.46.0"
arkworks_backend = { git = "https://github.com/noir-lang/arkworks_backend", version = "0.1.0" }
clap = { version = "4.5.15", features = ["derive"] }
base64 = "0.22.1"
